tests/ui/infinite/infer-stack-overflow.stderr
error[E0275]: overflow evaluating the requirement `for<'a> &'a (_,): MyTrait`
  --> $DIR/infer-stack-overflow.rs:19:18
   |
LL |     let _x: () = of();
   |                  ^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "4096"]` attribute to your crate (`infer_stack_overflow`)
note: required for `&'a ((_,),)` to implement `for<'a> MyTrait`
  --> $DIR/infer-stack-overflow.rs:9:9
   |
LL | impl<T> MyTrait for &'_ (T,) where for<'a> &'a T: MyTrait {}
   |         ^^^^^^^     ^^^^^^^^                      ------- unsatisfied trait bound introduced here
   = note: 2046 redundant requirements hidden
   = note: required for `&(((((((((((((((((((((((((((((((((((...,),),),),),),),),),),),),),),),),),),),),),),),),),),),),),),),),),),)` to implement `MyTrait`
   = note: the full type name has been written to '$TEST_BUILD_DIR/infinite/infer-stack-overflow/infer-stack-overflow.long-type-hash.txt'
note: required by a bound in `of`
  --> $DIR/infer-stack-overflow.rs:13:12
   |
LL | fn of<'a, T: 'a>() -> T
   |    -- required by a bound in this function
LL | where
LL |     &'a T: MyTrait,
   |            ^^^^^^^ required by this bound in `of`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
